<resources>

    <string name="app_name">Playlist maker</string>
    <string name="button_find">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_tools">Настройки</string>
    <string name="title_maker">Playlist maker</string>

    <string name="tools_dark_theme">Темная тема</string>
    <string name="tools_share_the_app">Поделиться приложением</string>
    <string name="tools_write_to_support">Написать в поддержку</string>
    <string name="tools_user_agreement">Пользовательское соглашение</string>

    <string name="tools_share_link">Курс по Андроид-разработке в Практикуме: https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="tools_to_support_email">kiwwwi@mail.ru</string>
    <string name="tools_to_support_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="tools_to_support_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="tools_to_agreement">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_hint">Поиск</string>


    <string name="album_artwork_description">Album artwork</string>
    <string name="search_image_view_description">Open search result</string>
    <string name="dot_description">Dot</string>

    <string name="search_no_results_placeholder_text">Ничего не нашлось</string>
    <string name="search_error_placeholder_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_error_button_text">Обновить</string>


    <string name="dark_theme_title">Темная тема</string>


    <string name="search_history_reset_button_text">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>



    <string name="countryLabel">Страна</string>
    <string name="primaryGenreNameLabel">Жанр</string>
    <string name="releaseDateLabel">Год</string>
    <string name="collectionNameLabel">Альбом</string>
    <string name="trackTimeMillsLabel">Длительность</string>


</resources>