<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/another_screen_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_panel_height"
            android:background="@color/another_screen_background"
            android:orientation="horizontal"
            android:padding="@dimen/padding_mini">
            <ImageView
                android:id="@+id/button_to_main"
                android:layout_width="@dimen/botton_big_size"
                android:layout_height="@dimen/botton_big_size"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_vector"
                android:contentDescription="@string/button_tools"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/another_screen_background"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/padding_main"
                android:text="@string/button_tools"
                android:textColor="@color/another_screen_title"
                android:textSize="@dimen/text_big"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_big"
            android:paddingHorizontal="@dimen/padding_main"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tools_panel_height">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/tools_dark_theme"
                    android:textColor="@color/another_screen_title"
                    android:textSize="@dimen/text_middle"/>

                <Switch
                    android:layout_width="@dimen/botton_big_size"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:paddingRight="0dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tools_panel_height"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/tools_share_the_app"
                android:textColor="@color/another_screen_title"
                android:textSize="@dimen/text_middle"
                app:drawableEndCompat="@drawable/share_vector"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tools_panel_height"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/tools_write_to_support"
                android:scaleType="centerInside"
                android:textColor="@color/another_screen_title"
                android:textSize="@dimen/text_middle"
                app:drawableEndCompat="@drawable/support_vector"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/tools_panel_height"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/tools_user_agreement"
                android:textColor="@color/another_screen_title"
                android:textSize="@dimen/text_middle"
                app:drawableEndCompat="@drawable/arrow_forward_vector"/>


        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>