<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_panel_height"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal"
            android:padding="@dimen/padding_mini">
            <ImageView
                android:id="@+id/buttonToMain"
                android:contentDescription="@string/button_find"
                style="@style/ButtonBackStyle"/>
            <TextView
                android:text="@string/button_find"
                style="@style/TitleActivityStyle"/>
        </LinearLayout>



        <!--Строка поиска песен-->
        <FrameLayout android:id="@+id/searchInputFrame"
            style="@style/SearchFrameStyle">

            <EditText
                android:id="@+id/searchEditText"
                android:imeOptions="actionDone"
                android:singleLine="true"
                style="@style/SearchEditTextStyle" />
            <ImageView
                android:id="@+id/searchClear"
                style="@style/ClearImageViewStyle" />
        </FrameLayout>

        <!--Результат поиска, список песен-->
        <FrameLayout android:id="@+id/searchResultsFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:paddingTop="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <!--История поиска-->
        <LinearLayout
            android:id="@+id/searchHistoryFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/youLookingFor"
                style="@style/SearchPlaceHolderStyle"
                android:layout_width="312dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:text="@string/search_history_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackHistorySearchList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <!--Очистка поиска-->
            <Button
                android:id="@+id/historyReset"
                style="@style/SearchHistoryResetButtonStyle"
                android:layout_width="148dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"/>

        </LinearLayout>


        <!--.................................... -->

        <!--Ничего не найдено-->
        <FrameLayout
            android:id="@+id/searchNoResultsPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/searchNoResultsImage"
                android:src="?attr/searchNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/search_result_error_image_margin_top"/>
            <TextView
                style="@style/SearchPlaceHolderStyle"
                android:layout_height="20dp"
                android:layout_width="312dp"
                android:text="@string/search_no_results_placeholder_text"/>

        </FrameLayout>

        <!--Ошибка поиска-->
        <FrameLayout
            android:id="@+id/searchErrorPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/searchErrorImage"
                android:src="?attr/searchError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/search_result_error_image_margin_top"/>

            <TextView
                style="@style/SearchPlaceHolderStyle"
                android:layout_height="88dp"
                android:layout_width="312dp"
                android:text="@string/search_error_placeholder_text"/>

            <Button
                android:id="@+id/searchRefresh"
                style="@style/SearchErrorButton"
                android:layout_width="91dp"
                android:layout_height="36dp"/>
        </FrameLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>